# kairo

./: .bazelignore  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  book.toml  buf.gen.yaml  buf.yaml  flake.nix  go.mod  go.sum  go.work  go.work.sum  lefthook.yaml  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.zed/: settings.json
backend/: go.work.sum
backend/apis/: go.mod
backend/app/admin/: README.md
backend/app/admin/manager/: doc.go  go.mod  go.sum
backend/app/admin/manager/cmd/: BUILD.bazel  main.go  wire.go
backend/app/admin/manager/rest/: provider.go
backend/app/admin/member/: go.mod
backend/app/api/account/: go.mod
backend/app/apiserver/account/: go.mod
backend/app/gateway/: go.mod
backend/app/rpc/account/: go.mod
backend/app/rpc/account/cmd/: application.yaml  main.go  wire.go  wire_gen.go
backend/app/rpc/account/interface/: provider.go  rpc.go
backend/app/rpc/account/interface/handler/: account.go
backend/app/rpc/account/resources/: application.yaml  sqlc.yaml
backend/app/rpc/account/server/: provider.go  server.go
backend/app/rpc/account/server/handler/: account.go
backend/app/rpc/member/cmd/: main.go  wire.go
backend/app/rpc/member/resources/: application.yaml
backend/app/rpc/member/resources/sql/: schema.sql
backend/app/rpc/member/rpc/: provider.go
backend/app/service/account/: go.mod
backend/app/service/account/rpc/: provider.go  rpc.go
backend/app/service/account/rpc/handler/: account.go
backend/app/service/agentic/: go.mod
backend/app/service/member/: go.mod
backend/kapis/: BUILD.bazel  doc.go  go.mod
backend/kapis/test/v1/: BUILD.bazel  test.pb.go  test.pb.gw.go  test_grpc.pb.go
backend/kapis/test2/v1/: BUILD.bazel  test2.pb.go  test2.pb.gw.go  test2_grpc.pb.go
docs/: BUILD.bazel
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/apis/: package.json
frontend/app/admin/: .env  next.config.ts  package.json
frontend/app/admin/.next/dev/: build-manifest.json  prerender-manifest.json  trace
frontend/app/admin/.next/dev/server/: interception-route-rewrite-manifest.js  middleware.js  (+3 more)
frontend/app/admin/app/: globals.css  layout.tsx
frontend/app/admin/app/(foundation)/: layout.tsx
frontend/app/admin/app/agentic/: layout.tsx
frontend/app/admin/app/signin/: page.tsx
frontend/app/admin/components/biz/: header-breadcrumb.tsx  header-search.tsx  header-user.tsx  nav-main.tsx  nav-projects.tsx  nav-secondary.tsx  nav-user.tsx  settings.tsx
frontend/app/admin/contexts/: next-intl-context.tsx  next-theme-context.tsx  tanstack-query-context.tsx
frontend/app/admin/feature/flow/: flow.client.tsx
frontend/app/admin/feature/login/: locale-switcher.tsx  normal-form.tsx  theme-toggle.tsx
frontend/app/admin/feature/setting/: Setting.tsx
frontend/app/admin/i18n/: language.ts  request.ts  server.ts
frontend/app/admin/locales/: ar-SA.json  zh-CN.json
frontend/app/miniApp/: babel.config.js  package.json  project.config.json  tsconfig.json
frontend/app/miniApp/config/: dev.ts  prod.ts
frontend/app/miniApp/src/: app.ts  index.html
frontend/app/miniApp/types/: global.d.ts
frontend/app/mobileApp/: App.tsx  app.json  jest.config.js
frontend/app/mobileApp/__tests__/: App.test.tsx
frontend/app/nativeApp/: app.config.ts  package.json
frontend/app/webApp/: package.json
infra/: README.md
infra/aws/: Pulumi.yaml  go.mod
scripts/: BUILD.bazel
tools/: BUILD.bazel  bazel  tools.json
(+678 files in other folders)
