load("@bazel_env.bzl", "bazel_env")
load("@gazelle//:go_tools.bzl", "GO_TOOLS")
load("@multitool//:tools.bzl", "TOOLS")

exports_files(
    ["multitool.lock.json"],
)

bazel_env(
    name = "bazel_env",
    toolchains = {
        "go": "@rules_go//go:toolchain",
        "nodejs": "@nodejs_toolchains//:resolved_toolchain",
    },
    tools = {
        "go": "@rules_go//go",
        "node": "$(NODE_PATH)",
        "pnpm": "@pnpm",
    } | GO_TOOLS | TOOLS,
)
